force-app/main/default/objects/Current_Roles__c/Current_Roles__c.object-meta.xml
<CustomObject>
    <label>Current Role</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Current Role #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>