force-app/main/default/objects/Current_Roles__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Current Roles</relationshipLabel>
    <relationshipName>Current_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>