force-app/main/default/objects/Current_Roles__c/fields/Update_Notes__c.field-meta.xml
<CustomField>
    <fullName>Update_Notes__c</fullName>
    <label>Update Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>